# verif

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.eval  LICENSE  README.md  SETUP_AUTH.md  docker-compose.eval.yml  docker-compose.yml  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml
app/: auth.py  config.py  database.py  dependencies.py  entropy_detector.py  main.py  ml_model.py  model.py  models.py
app/routes/: auth.py
app/static/: about.html  index.html  tos.html
evaluation/: evaluate.py
scripts/: README.md  download_hc3.py  evaluate_model.py  prepare_features.py  train_joseph_model.py
