[project]
name = "verif"
version = "3.0.0"
description = "Dual-pathway AI text detection system"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.2",
    "transformers>=4.36.2",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "numpy<2",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0",
]
eval = [
    "datasets>=2.16.1",
    "scipy>=1.11.4",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.2",
]

[tool.bandit]
exclude_dirs = ["/test", "/tests"]
skips = ["B101"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
